--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,7 +2,7 @@
 
 sentry_enabled: yes                                       # Enable the role
 sentry_remove: no                                         # Uninstall the role
-sentry_version: 8.2.3
+sentry_version: 8.6.0
 sentry_home: /usr/lib/sentry                              # Deploy sentry to the folder
 sentry_user: sentry                                       # Run as user
 sentry_hostname: "{{inventory_hostname}}"
@@ -29,6 +29,7 @@ sentry_projects:                                          # Creates project for 
   team: sentry
 
 sentry_config_additional: []                              # List of additional options
+sentry_default_time_zone: "UTC"
 
 # Setup gunicorn
 sentry_web_host: 127.0.0.1
