--- a/templates/sentry-cron.conf
+++ b/templates/sentry-cron.conf
@@ -12,4 +12,4 @@ console log
 chdir {{sentry_home}}
 setuid {{sentry_user}}
 
-exec {{sentry_home}}/env/bin/sentry --config={{sentry_home}} run worker
+exec {{sentry_home}}/env/bin/sentry --config={{sentry_home}} run cron
