--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -5,9 +5,11 @@
   with_items:
     - sentry-web
     - sentry-worker
+    - sentry-cron
 
 - name: sentry reload
   service: name={{item}} state=reloaded
   with_items:
     - sentry-web
     - sentry-worker
+    - sentry-cron
